ajout style.css + gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-[Claude_Aubry]_Scrum_-_4e_éd.-_Le_guide_pratique_(b-ok.org).pdf
-/test_counter.2
-README.md
 Note_de_cadrage_Agence Web.pdf
-wild_not_you/node_modules
+font/
+style-guide.jpg
+stylesheet.css
+test_counter3/
+wild_not_you/node_modules/
 wild_not_you/package-lock.json
 
