--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.9",
     "ejs": "^2.5.8",
     "express": "~4.15.5",
+    "fs": "0.0.1-security",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "pg": "^7.4.1",
     "pug": "2.0.0-beta11",
