--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.5.8",
-    "express": "~4.15.5",
+    "express": "^4.15.5",
     "fs": "0.0.1-security",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
