--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.5.8",
     "express": "^4.15.5",
     "fs": "0.0.1-security",
+    "method-override": "^2.3.10",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
