--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.5",
     "fs": "0.0.1-security",
     "method-override": "^2.3.10",
+    "moment": "^2.22.1",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
