--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.6.4",
     "pg": "^7.4.1",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
